[gd_scene load_steps=22 format=3 uid="uid://btfwxbh8s0tj6"]

[ext_resource type="Script" uid="uid://mjmnqv1kqcic" path="res://Scripts/menu_main.gd" id="1_a20kb"]
[ext_resource type="FontFile" uid="uid://co6owd56d1wdh" path="res://Assets/Fonts/Round9x13.ttf" id="2_a2g4b"]
[ext_resource type="Texture2D" uid="uid://cwbr03mi1do2" path="res://Assets/Backgrounds/Forest Pixel Art/PNG/Layers/BackGround_007.png" id="3_41g87"]
[ext_resource type="Texture2D" uid="uid://clnq8bu4qq02k" path="res://Assets/Backgrounds/Forest Pixel Art/PNG/Layers/BackGround_006.png" id="4_1drt4"]
[ext_resource type="Texture2D" uid="uid://5urfrmdpvykq" path="res://Assets/Backgrounds/Forest Pixel Art/PNG/Layers/BackGround_005.png" id="5_6ji8p"]
[ext_resource type="Texture2D" uid="uid://q82av81c4p28" path="res://Assets/Backgrounds/Forest Pixel Art/PNG/Layers/BackGround_004.png" id="6_2knbe"]
[ext_resource type="Texture2D" uid="uid://car6rgalk0046" path="res://Assets/Backgrounds/Forest Pixel Art/PNG/Layers/BackGround_003.png" id="7_8npvd"]
[ext_resource type="Texture2D" uid="uid://bt1jc463qiqr1" path="res://Assets/Backgrounds/Forest Pixel Art/PNG/Layers/BackGround_002.png" id="8_av13w"]
[ext_resource type="Texture2D" uid="uid://di50wy3q4jg7t" path="res://Assets/Backgrounds/Forest Pixel Art/PNG/Layers/BackGround_001.png" id="9_xeird"]

[sub_resource type="SystemFont" id="SystemFont_1rerr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cayip"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_158mb"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwsa2"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsrd8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbdvm"]
bg_color = Color(0.33333334, 0.88235295, 0.8235294, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3rjx"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6swd7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qvly"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rfqti"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g8i7c"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_23t3j"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a20kb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer1" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer1"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer1"]
layout_mode = 2
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_1rerr")
theme_override_font_sizes/font_size = 60
text = "THE SHOPKEEPER
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BPlay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -105.0
offset_right = 200.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_a2g4b")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_cayip")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_158mb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wwsa2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jsrd8")
theme_override_styles/hover = SubResource("StyleBoxFlat_wbdvm")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_q3rjx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_6swd7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_7qvly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rfqti")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_g8i7c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_23t3j")
text = "PLAY"

[node name="BSettings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -12.0
offset_right = 201.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_a2g4b")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_cayip")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_158mb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wwsa2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jsrd8")
theme_override_styles/hover = SubResource("StyleBoxFlat_wbdvm")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_q3rjx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_6swd7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_7qvly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rfqti")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_g8i7c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_23t3j")
text = "SETTINGS"

[node name="BExit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = 79.0
offset_right = 201.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_a2g4b")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_cayip")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_158mb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wwsa2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jsrd8")
theme_override_styles/hover = SubResource("StyleBoxFlat_wbdvm")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_q3rjx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_6swd7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_7qvly")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rfqti")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_g8i7c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_23t3j")
text = "EXIT"

[node name="BackGround007" type="Sprite2D" parent="."]
z_index = -50
position = Vector2(576.5, 323.5)
scale = Vector2(3.2083335, 3.5944443)
texture = ExtResource("3_41g87")

[node name="BackGround006" type="Sprite2D" parent="."]
z_index = -45
position = Vector2(589.99994, 335)
scale = Vector2(4.5499997, 4.6888885)
texture = ExtResource("4_1drt4")

[node name="BackGround005" type="Sprite2D" parent="."]
z_index = -40
position = Vector2(582, 308)
scale = Vector2(4.3194447, 5.426389)
texture = ExtResource("5_6ji8p")

[node name="BackGround004" type="Sprite2D" parent="."]
z_index = -35
position = Vector2(574.00006, 311.75)
scale = Vector2(4.561111, 5.519445)
texture = ExtResource("6_2knbe")

[node name="BackGround003" type="Sprite2D" parent="."]
z_index = -30
position = Vector2(622.5, 302.50003)
scale = Vector2(4.441667, 5.727778)
texture = ExtResource("7_8npvd")

[node name="BackGround002" type="Sprite2D" parent="."]
z_index = -25
position = Vector2(534.50006, 273)
scale = Vector2(4.1194444, 4.4666667)
texture = ExtResource("8_av13w")

[node name="BackGround001" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(576.50006, 326.5)
scale = Vector2(3.2027776, 3.6277776)
texture = ExtResource("9_xeird")

[connection signal="pressed" from="BPlay" to="." method="_on_b_play_pressed"]
[connection signal="pressed" from="BSettings" to="." method="_on_b_settings_pressed"]
[connection signal="pressed" from="BExit" to="." method="_on_b_exit_pressed"]
